--- a/wrong.html
+++ b/wrong.html
@@ -26,7 +26,7 @@
 		<h1><center><br><br><br><br><b>
 		OOPSIES!! </b><br><br>
 		<br>Wrong! Let's try that again?<br><br><br><br>
-			<a href="GH_ICT9EMERALD_Q4SW1_ROLA.html"><button type="button" class="btn btn-lg">Home</button></a>
+			<a href="index.html"><button type="button" class="btn btn-lg">Home</button></a>
 			<a href="JStrivia_q1.html"><button type="button" class="btn btn-lg">Back to Start</button></a>
 			</center>
 		</center></h1>
