--- a/winner.html
+++ b/winner.html
@@ -26,7 +26,7 @@
 		<h1><center><br><br><br><br><b>
 		CONGRATULATIONS!! </b><br><br>
 		<br>You've beaten the game. You win an iphone 13!<br><br><br><br> Thanks for playing! <br><br>
-			<a href="GH_ICT9EMERALD_Q4SW1_ROLA.html"><button type="button" class="btn btn-lg">Back Home</button></a>
+			<a href="index.html"><button type="button" class="btn btn-lg">Back Home</button></a>
 			</center>
 		</center></h1>
 	</div>
